# horizon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/apps/horizon-push/: README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
crates/apps/horizon-push/src/: App.css  App.tsx  DragDropArea.tsx  FileSection.tsx  ReadyToShare.tsx  StatusPanel.tsx  main.tsx
crates/apps/horizon-push/src-cli/: Cargo.toml  cli.rs  common.rs  error.rs  lib.rs  main.rs  receive.rs  send.rs
crates/apps/horizon-push/src-cli/test/: simple_interaction.rs
crates/apps/horizon-push/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/apps/horizon-push/src-tauri/src/: lib.rs  main.rs
crates/apps/horizon-server/: Cargo.toml
crates/apps/horizon-server/src/: cli.rs  main.rs  start_server.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  event.rs  iroh.rs  lib.rs  s3.rs
crates/core/src/iroh/: client_status.rs  common.rs  document.rs  download_progress.rs  endpoint.rs  receive.rs  send.rs  ticket.rs
crates/core/src/s3/: helpers.rs  iroh_impl.rs  namespace_lookup_table.rs  sequence_diagrams.md
crates/core/tests/: s3_horizon_integration.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: errors.rs  invoke_from_js.rs  lib.rs  plugin_loader.rs  types.rs  wasm_extension.rs
crates/plugin/test_plugins/: output.wat  test_plugin.json
crates/plugin/wit/: wasmio.wit
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/streaming/: Cargo.toml
crates/streaming/src/: lib.rs
crates/video/: Cargo.toml
crates/video/src/: lib.rs
crates/wasm_plugins/js_example/: README.md  handle.js  package-lock.json  package.json
crates/wasm_plugins/js_example/wit/: wasmio.wit
crates/wasm_plugins/rust_example/: Cargo.toml  build.rs  build.sh
crates/wasm_plugins/rust_example/pkg/: output.wat  wasm_example.js  wasm_example_bg.wasm
crates/wasm_plugins/rust_example/src/: lib.rs
examples/: storage_demo.rs
infra/github_runner/: .env.example  Dockerfile.runner  README.md  docker-compose.yml  manage_runner.sh
infra/github_runner/scripts/: start-runner.sh
wiki/: capability_based_access_control_system.md
