[workspace]
members = [
    # "crates/api",
    "crates/storage",
    "crates/streaming",
    # "crates/video",
    # "crates/auth",
    "crates/core",
    "crates/plugin",
    "crates/apps/horizon-push/src-tauri",
    "crates/apps/horizon-push/src-cli"
    # "examples/video_stream"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["vikpelle@gmail.com"]


[workspace.dependencies]
# Async runtime and web framework
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
async-trait = "0.1.83"
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3.31"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
async-channel = "2.3.1"
futures-buffered = "0.2.4"
futures-lite = "2.3.0"


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
data-encoding = "2.6.0"


# Cli
clap = { version = "4.5.8", features = ["derive", "env"] }

# Storage and networking
iroh = "0.29.0"
iroh-base = "0.29.0"
iroh-blobs = "0.29.0"
iroh-docs = "0.29.0"
quiche = "0.20"
walkdir = "2.4.0"



# IPFS related
cid = "0.10"
multihash = "0.18"
multibase = "0.9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Video processing
ffmpeg-next = "6.1"

# Authentication
jsonwebtoken = "9.2"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
tokio-test = "0.4"

# console utilities
indicatif = "0.17.9" #progress bar
console = "0.15.7"

# randomness
rand = "0.8.5"

num_cpus = "1.16.0"


uuid = { version = "1.7", features = ["v4", "serde"] }

# [workspace.dev-dependencies]
# tokio-test = "0.4"
# mockall = "0.12"
# wiremock = "0.5"
# tempfile = "3.9"
