[workspace]
members = [
    "crates/api",
    "crates/storage",
    # "crates/auth",
    "crates/core",
    "crates/plugin",
    "crates/apps/horizon-push/src-tauri",
    "crates/apps/horizon-push/src-cli",
    "crates/apps/horizon-server",
]
resolver = "2"

[profile.dev]
# incremental = true
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["lupuszr <vikpelle@gmail.com>"]


[workspace.dependencies]
# Async runtime and web framework
tokio = { version = "1.36", features = ["full"] }
# tokio = { version = "1.43", features = ["sync", "macros", "io-util", "rt", "time"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5.2"
hyper = { version = "1.6.0" }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }

async-trait = "0.1.83"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
futures = "0.3.31"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
async-channel = "2.3.1"
futures-buffered = "0.2.4"
futures-lite = "2.3.0"


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-error = "0.1.3"
serde_json = "1.0"
data-encoding = "2.6.0"
serde_cbor = "0.11.2"


# Cli
clap = { version = "4.5.8", features = ["derive", "env"] }

# Storage and networking
iroh = "0.33.0"
iroh-base = "0.33.0"
quiche = "0.20"
walkdir = "2.4.0"
quic-rpc = { version = "0.17" }
iroh-docs = { version = "0.33", features = ["rpc"] }
iroh-blobs = { version = "0.33", features = ["rpc"] }
iroh-gossip = { version = "0.33", features = ["rpc"] }
iroh-blake3 = { version = "1.4.5" }
iroh-node-util = "0.33"


# IPFS related
cid = "0.10"
multihash = "0.18"
multibase = "0.9"

# Time handling
chrono = { version = "0.4.40", features = ["serde"] }

# Video processing
ffmpeg-next = "6.1"

# Authentication
jsonwebtoken = "9.2"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
tokio-test = "0.4"

# console utilities
indicatif = "0.17.9" #progress bar
console = "0.15.7"

# randomness
rand = "0.8.5"

num_cpus = "1.16.0"

dirs-next = "2.0.0"


uuid = { version = "1.7", features = ["v4", "serde"] }

# S3 support
s3s = { git = "https://github.com/Nugine/s3s", branch = "main", features = [
    "tower",
] }
s3s-aws = { git = "https://github.com/Nugine/s3s", branch = "main" }
aws-sdk-s3 = "1.78.0"
aws-config = { version = "1.5.18", default-features = false }
aws-credential-types = { version = "1.2.1", features = ["test-util"] }

std-next = { version = "0.1.5" }

# runtimes for plugins
deno_core = "0.331.0"
deno_error = { version = "0.5.5", features = [
    "serde_json",
    "serde",
    "url",
    "tokio",
] }
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
time = { version = "0.3.36", features = ["formatting", "parsing", "macros"] }
url = "2.5.4"
# [workspace.dev-dependencies]
# tokio-test = "0.4"
# mockall = "0.12"
# wiremock = "0.5"
tempfile = "3.9"
