[package]
name = "horizon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "horizon_core"
path = "src/lib.rs"

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
time = { workspace = true }

# Serialization
serde = { workspace = true }
serde-error = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
data-encoding = { workspace = true }
chrono.workspace = true
# Error handling and logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Types
uuid = { version = "1.7", features = ["v4", "serde"] }
# Ipfs related
cid.workspace = true
multihash.workspace = true
multibase.workspace = true


iroh = { workspace = true, features = ["discovery-local-network"] }
iroh-blake3 = { workspace = true }
iroh-base = { workspace = true }
quic-rpc = { workspace = true }
iroh-docs = { workspace = true }
iroh-blobs = { workspace = true }
iroh-gossip = { workspace = true }
iroh-node-util = { workspace = true }
walkdir = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
async-channel = { workspace = true }
futures-buffered = { workspace = true }
futures-lite = { workspace = true }


# cli
clap = { workspace = true }

# console utils
console = { workspace = true }
indicatif = { workspace = true }

std-next = { workspace = true }

# S3
s3s = { workspace = true, features = ["tower"] }
s3s-aws = { workspace = true }
aws-sdk-s3 = { workspace = true, features = ["behavior-version-latest"] }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }

# randomness
rand = { workspace = true } # Utilities

pin-project = "1.1.10"
pin-project-lite = "0.2.16"
bytes = "1.5"
base64 = "0.21"
base64-simd = "0.8.0"
crc32c = "0.6.8"
tempfile = { workspace = true }

num_cpus = { workspace = true }


[dev-dependencies]
tokio-test = { workspace = true }
