[package]
name = "horizon-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "horizon_plugin"
path = "src/lib.rs"

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Types
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Ipfs related
cid.workspace = true
multihash.workspace = true
multibase.workspace = true

# tuntimes
deno_core = { workspace = true }
deno_error = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = "29.0.0"


tempfile = { workspace = true }
dirs-next = { workspace = true }

# Local crates
horizon-core = { path = "../../crates/core" }

[dev-dependencies]
wabt = "0.10.0"
tokio-test = { workspace = true }
