[package]
name = "hybrid-streaming-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hybrid-streaming-common = { path = "../common" }

# Iroh dependencies
iroh.workspace = true

# Async and utils
tokio.workspace = true
async-trait.workspace = true
futures = "0.3"
bytes = "1.5"

# Error handling and logging
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3.10"
