[package]
name = "rust_example"
edition = "2021"
version.workspace = true
# edition.workspace = true
authors.workspace = true

[dependencies]
wasm-bindgen = "0.2"                            # Or the latest version
wasm-bindgen-futures = "0.4"
# iroh-blobs = { workspace = true }

# Add your dependencies here.  Common ones for WASM include:
serde = { workspace = true }  # For serialization (if needed)
serde-error = { workspace =  true }
serde_json = { workspace = true }
data-encoding = { workspace = true }
chrono.workspace = true
# Error handling and logging
thiserror = { workspace = true }
                        # For JSON (if needed)
# Local crates
# horizon-core = { path = "../../../crates/core" }
  
[lib]
crate-type = ["cdylib"] # Important: This creates a dynamic library suitable for WASM


