[package]
name = "horizon-push"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "horizon_push_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
data-encoding = { workspace = true }
chrono.workspace = true
tokio = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }
walkdir = { workspace = true }
iroh-blobs = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
async-channel = { workspace = true }
futures-buffered = { workspace = true }
futures-lite = { workspace = true }

# randomness 
rand = { workspace = true }# Utilities

# uuid
uuid = { workspace = true }

dirs-next = { workspace = true }

# Local crates
horizon-core = { path = "../../../../crates/core" }
tauri-plugin-dialog = "2"

